#Nmap Changelog ($Id$); -*-text-*-

o Nmap will now output a list of port numbers for each "ignored" state in the
  "extrareasons" element in XML output. The "All X ports" and "Not shown:" lines
  in normal output have been changed slightly to provide more detail. [Daniel Miller]

o New script port-states will print a list of ports that were found in each
  state, including states that were summarized as "Not shown: X closed ports"
  [Daniel Miller]

o New Nmap option --unique will prevent Nmap from scanning the same IP address
  twice, which can happen when different names resolve to the same address. [Daniel Miller]

o [NSE][GH#2175] Fixed NSE so it will not consolidate all port script output
  for targets which share an IP (e.g. HTTP vhosts) under one target. [Daniel Miller]

o [Zenmap][GH#2157] Fixed an issue where a failure to execute Nmap would result
  in a Zenmap crash with "TypeError: coercing to Unicode" exception.

o Nmap no longer considers an ICMP Host Unreachable as confirmation that a
  target is down, in accordance with RFC 1122 which says these errors may be
  transient. Instead, the probe will be destroyed and other probes used to
  determine aliveness. [Daniel Miller]

o [NSE][GH#711] New script openflow-info gathers preferred and supported
  protocol versions from OpenFlow devices [Jay Smith, Mak Kolybabi]

o [NSE][GH#2201] New script nbns-interfaces queries NetBIOS name service (NBNS)
  to gather IP addresses of the target's network interfaces [Andrey Zhukov]

o New UDP payloads:
  + [GH#1279] TS3INIT1 for UDP 3389 [colcrunch]
  + [GH#1895] DTLS for UDP 3391 (RD Gateway) [Arnim Rupp]

o [Ncat][GH#2154] Ncat no longer crashes when used with Unix domain sockets.

o [Ncat][GH#2167][GH#2168] Ncat is now again generating certificates
  with the duration of one year. Due to a bug, recent versions of Ncat were
  using only one minute. [Tobias Girstmair]

o [NSE][GH#2174] Script hostmap-crtsh got improved in several ways. The most